# diesel-demo

./: Cargo.toml  README.md  docker-compose.yml
migrations/2020-11-17-173847_example/: down.sql  up.sql
src/: models.rs  schema.rs
