[package]
name = "diesel-demo"
version = "0.1.0"
authors = ["mattdowdell <mdowdell244@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { git = "https://github.com/diesel-rs/diesel", features = ["postgres", "uuid"] }
uuid = { version = "0.8.0", features = ["v4"] }
